--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         Write the HTML for your personal website.
         -->
         <img src="av2.jpg">
-        <h1>Hi, my name is Jaggu</h1>
+        <h1>Hi, my name is Toph</h1>
         <h2>Fun facts about me:</h2>
         <ul>
             <li>19 years old</li>
